# nook

./: .gitignore  LICENSE  README.md  pyproject.toml
nook/: main.py
nook/client/: config.py  deploy.py
nook/server/: api.py  auth.py  config.py  dashboard.html  router.py
server/: main.py
