[project]
name = "nook"
version = "0.0.1"
description = "A self-hosted and open-source mini-paas."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "pydantic>=2.13.3",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "typer>=0.25.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
nook = "nook.main:main"
